--- a/app/src/main/res/layout/activity_all_product_desc.xml
+++ b/app/src/main/res/layout/activity_all_product_desc.xml
@@ -41,8 +41,8 @@
             android:layout_below="@+id/toolbar_board"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:background="#f8f8f8"
             android:layout_marginTop="40dp"
+            android:background="#f8f8f8"
             android:src="@drawable/ic_profile" />
 
         <TextView
@@ -196,7 +196,8 @@
             android:layout_marginTop="35dp"
             android:background="@drawable/back_button"
             android:padding="10dp"
-            android:text="Add requirement" />
+            android:text="Add requirement"
+            android:textColor="@color/white"/>
 
 
     </RelativeLayout>
