--- a/app/src/main/res/layout/card_view_buyer_order.xml
+++ b/app/src/main/res/layout/card_view_buyer_order.xml
@@ -33,15 +33,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
         android:text="Completed"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.711"
-        app:layout_constraintStart_toEndOf="@+id/tv_buyer_order_name"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_buyer_order_name"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="30dp"
@@ -67,7 +66,7 @@
 
     <TextView
         android:id="@+id/tv_buyer_order_quantity"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="Quantity"
@@ -94,7 +93,7 @@
 
     <TextView
         android:id="@+id/tv_buyer_order_amount"
-        android:layout_width="130dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="Final Amount"
