--- a/app/src/main/res/drawable/register_bs_button_clicked.xml
+++ b/app/src/main/res/drawable/register_bs_button_clicked.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <corners android:radius="5dp"/>
     <stroke android:color="@color/teal_200" android:width="1dp"/>
-    <solid android:color="#4586f2"/>
+    <solid android:color="#1566e0"/>
 
 </shape>
