--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".ProductDetails" >
 
     <com.google.android.material.appbar.AppBarLayout
@@ -29,31 +30,53 @@
             android:id="@+id/toolbar_board"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            >
+            android:background="#4586f2"
+            app:title="All Products"
+            app:titleTextColor="@color/white">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="178dp"
-                    android:layout_height="35dp"
-                    android:text="TextView"
-                    android:gravity="start|center"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/delete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/ic_baseline_delete_24"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/img_prod_details_back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:src="@drawable/ic_arrow_back"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:text="Product Details"
+                        android:textColor="@color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/img_prod_details_back"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <ImageView
+                        android:id="@+id/delete"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="16dp"
+                        android:src="@drawable/ic_baseline_delete_24"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -73,49 +96,59 @@
             android:orientation="vertical"
             android:padding="8dp">
 
-            <ImageView
-                android:id="@+id/iv_productDetails_image"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:enabled="false"
-                android:padding="8dp"
-                android:src="@color/black" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f8f8f8"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/iv_productDetails_image"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="12dp"
+                    android:padding="8dp"
+                    android:src="@color/black" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:textStyle="bold"
-                android:text="Product Name"/>
+                android:paddingStart="10dp"
+                android:text="Product Name"
+                android:textSize="20sp"
+                android:textColor="@color/black"/>
+
             <EditText
                 android:id="@+id/tv_productDetails_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:enabled="false"
-                android:padding="8dp"
-                android:textAlignment="center"
+                android:paddingStart="10dp"
                 android:textColor="@color/black"
-
-                android:textSize="20sp" />
+                android:textSize="24sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="Description"
-                android:padding="8dp"
+                android:paddingStart="10dp"
                 android:textAlignment="viewStart"
-                android:textStyle="bold" />
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
             <EditText
                 android:id="@+id/tv_productDetails_desc"
                 android:layout_width="match_parent"
-                android:padding="8dp"
+                android:paddingStart="10dp"
                 android:enabled="false"
                 android:textColor="@color/black"
+                android:textSize="20sp"
                 android:layout_height="wrap_content" />
 
 
@@ -126,14 +159,16 @@
                 android:padding="12dp"
                 android:layout_marginTop="12dp">
 
+
                 <TextView
                     android:id="@+id/tv_productDetails"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignBaseline="@id/tv_productDetails_mrp"
-                    android:text="MRP:"
+                    android:text="MRP: "
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
-
 
                 <EditText
                     android:id="@+id/tv_productDetails_mrp"
@@ -141,9 +176,8 @@
                     android:layout_height="match_parent"
                     android:layout_toRightOf="@id/tv_productDetails"
                     android:enabled="false"
-                    android:textColor="@color/black"
-
-                    android:textStyle="bold" />
+                    android:textSize="20sp"
+                    android:textColor="@color/black" />
 
                 <EditText
                     android:id="@+id/tv_productDetails_dp"
@@ -151,33 +185,37 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
                     android:enabled="false"
-                    android:textColor="@color/black"
-
-                    android:textStyle="bold" />
+                    android:textSize="20sp"
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignBaseline="@id/tv_productDetails_dp"
                     android:layout_toLeftOf="@id/tv_productDetails_dp"
-                    android:text="Discounted Price:"
-                    android:textStyle="bold"
-
-                    />
+                    android:text="Discounted Price: "
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
 
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp">
 
 
                 <TextView
                     android:id="@+id/aaa"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Minimun Quantity for discount:" />
+                    android:layout_marginStart="12dp"
+                    android:text="Minimun Quantity for discount: "
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
 
                 <EditText
                     android:id="@+id/tv_productDetails_minQuantity"
@@ -186,32 +224,39 @@
                     android:layout_alignBaseline="@id/aaa"
                     android:layout_marginTop="12dp"
                     android:layout_toRightOf="@id/aaa"
-                    android:textColor="@color/black"
                     android:enabled="false"
-                    android:padding="8dp" />
+                    android:textSize="20sp"
+                    android:textColor="@color/black" />
 
             </RelativeLayout>
 
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/bt_productDetails_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_marginTop="32dp"
-                    android:text="Edit Details" />
+                    android:padding="10dp"
+                    android:background="@drawable/back_button"
+                    android:text="Edit Details"
+                    android:textColor="@color/white"/>
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/bt_productDetails_update"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_marginTop="32dp"
+                    android:background="@drawable/back_button"
+                    android:padding="10dp"
                     android:text="Update Details"
+                    android:textColor="@color/white"
                     android:visibility="invisible" />
 
             </RelativeLayout>
