--- a/app/src/main/res/layout/activity_seller_add_product.xml
+++ b/app/src/main/res/layout/activity_seller_add_product.xml
@@ -55,64 +55,64 @@
             android:id="@+id/et_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="70dp"
             android:layout_marginEnd="16dp"
             android:hint="Product Name"
             android:padding="8dp"
-            android:textColorHint="#808080"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textColorHint="#808080" />
 
         <EditText
             android:id="@+id/et_productDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
             android:hint="Product Description"
             android:padding="8dp"
-            android:textColorHint="#808080"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textColorHint="#808080" />
 
         <EditText
             android:id="@+id/et_MRP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
             android:hint="MRP"
             android:inputType="number"
             android:padding="8dp"
-            android:textColorHint="#808080"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textColorHint="#808080" />
 
         <EditText
             android:id="@+id/et_product_discountedPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
             android:hint="Discounted Price"
             android:inputType="number"
             android:padding="8dp"
-            android:textColorHint="#808080"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textColorHint="#808080" />
 
         <EditText
             android:id="@+id/et_minQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
             android:hint="Minimum Quantity for discount"
             android:inputType="number"
             android:padding="8dp"
-            android:textColorHint="#808080"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textColorHint="#808080" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
