--- a/app/src/main/res/layout/card_view_all_products.xml
+++ b/app/src/main/res/layout/card_view_all_products.xml
@@ -56,7 +56,7 @@
 
     <TextView
         android:id="@+id/tv_all_products_mrp"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="MRP"
@@ -83,7 +83,7 @@
 
     <TextView
         android:id="@+id/tv_all_products_dp"
-        android:layout_width="130dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="discounted price"
