--- a/app/src/main/res/layout/left_nav_header.xml
+++ b/app/src/main/res/layout/left_nav_header.xml
@@ -28,7 +28,7 @@
 
             <TextView
                 android:id="@+id/tv_left_nav_name"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerInParent="true"
